# buoy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml
.github/workflows/: build.yml  bump_version.yaml  changelog.yaml  changelog.yml  ci.yaml  docs.yaml  lint.yaml  release.yaml  release.yml  test.yaml
assets/configs/: scenario.ron
crates/buoy-client/: README.md
crates/buoy-common/: Cargo.toml  README.md
crates/buoy-common/src/: lib.rs  plugins.rs  states.rs  types.rs
crates/buoy-common/src/objects/: balloon.rs  mod.rs
crates/buoy-core/: Cargo.toml
crates/buoy-core/src/: balloon.rs  constants.rs  core.rs  fluid_volume.rs  grid.rs  lib.rs  material_properties.rs  mesh_drag.rs  test_utils.rs
crates/buoy-physics/: Cargo.toml  README.md
crates/buoy-physics/src/: atmosphere.rs  core.rs  force.rs  forces.rs  geometry.rs  grid.rs  ideal_gas.rs  lib.rs  material_properties.rs  mesh_utils.rs  time.rs
crates/buoy-physics/src/forces/: buoyancy.rs  drag.rs  mod.rs  weight.rs
crates/buoy-physics/src/objects/: balloon.rs
crates/buoy-runtime/: Cargo.toml  README.md
crates/buoy-runtime/src/: collider.rs  config.rs  controls.rs  forces.rs  format.rs  lib.rs  render.rs  scene.rs  sequencing.rs
crates/buoy-runtime/src/console/: commands.rs  mod.rs  repl.rs
crates/buoy-runtime/src/objects/: balloon.rs  environment.rs  mod.rs
crates/buoy-server/: Cargo.toml  README.md
crates/buoy-server/src/: config.rs  hardware.rs  main.rs
crates/buoy-ui/: Cargo.toml
crates/buoy-ui/src/: camera.rs  controls.rs  debug.rs  lib.rs  lighting.rs  main.rs  scene.rs  shell.rs
crates/buoy_aero/: Cargo.toml  README.md
crates/buoy_atmo/: Cargo.toml  README.md
crates/buoy_atmo/src/: lib.rs  us_std_1976.rs
crates/buoy_common/: Cargo.toml  README.md
crates/buoy_common/src/: config.rs  format.rs  lib.rs  runtime.rs  units.rs
crates/buoy_core/: Cargo.toml  README.md
crates/buoy_core/src/: config.rs  constants.rs  forces.rs  lib.rs  mesh_drag.rs
crates/buoy_physics/: Cargo.toml  README.md
crates/buoy_physics/examples/: basic_physics.rs
crates/buoy_physics/src/: forces.rs  ideal_gas.rs  lib.rs
crates/buoy_physics/tests/: physics_tests.rs
crates/buoy_sim/: Cargo.toml  README.md
crates/buoy_sim/src/: config.rs  core.rs  lib.rs  logging.rs  main.rs  map.rs
docs/: architecture.md  design.md  hil_arch.md  overview.md
docs/api/: architecture.md  overview.md
docs/captains_log/: 2025-07-26.md
examples/: advanced_aerodynamics.rs  basic_simulation.rs
python/: .gitignore  README.md  pyproject.toml
python/buopy/: __init__.py  atmosphere.py  cli.py  constants.py  dynamics.py  forces.py  ideal_gas.py  units.py
src/: lib.rs  main.rs
src/engine/: forces.rs  grid.rs
src/physics/: atmosphere.rs  forces.rs  geometry.rs  ideal_gas.rs  mod.rs  time.rs
src/scenario/: mod.rs
src/ui/: camera.rs  controls.rs  debug.rs  lib.rs  lighting.rs  mod.rs
