[package]
name = "buoy"
version = "0.1.0"
edition = "2024"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
description = "A buoyancy physics simulator built with Bevy"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/philiplinden/buoy"
keywords = ["physics", "simulation", "bevy"]
categories = ["simulation"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_render",         # Required for mesh handling
    "bevy_pbr",            # Required for mesh processing
    "multi_threaded",
    "sysinfo_plugin",
    "bevy_log",
    "trace",
] }
avian3d = { version = "0.3.1", features = ["parallel", "enhanced-determinism"] }
uom = "0.37.0"
big_space = "0.9.1"

[features]
default = ["render", "debug"]
render = [
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gizmos",
    "bevy/bevy_color",
    "bevy/bevy_mesh_picking_backend",
    "bevy/bevy_window",
    "bevy/bevy_text",
    "bevy/default_font",
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/x11",
    "bevy/wayland",
]
headless = []
debug = ["bevy/bevy_dev_tools", "bevy/dynamic_linking", "bevy/track_location"]
ci = ["headless", "bevy/bevy_ci_testing"]

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile for our code.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = false

# The default profile is optimized for Wasm builds because that's what [Trunk
# reads](https://github.com/trunk-rs/trunk/issues/605). Optimize for size in the
# wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit. Slows compile times, marginal
# improvements.
# codegen-units = 1

# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime
# performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file
# size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
