[workspace]
resolver = "2" # Important for Bevy
members = [
    "crates/buoy-physics",
    # "crates/buoy-ui",
    "crates/buoy-runtime",
]

default-members = [
    "crates/buoy-physics",
    "crates/buoy-runtime",
]

[workspace.package]
version = "0.3.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
readme = "README.md"
edition = "2024"
license = "MIT or Apache-2.0"
license-file = "LICENSE-APACHE"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
    "bevy_log",
    "trace",
] }
avian3d = { version = "0.3.1", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "enhanced-determinism",
    "parallel",
    "default-collider",
    # "collider-from-mesh",
] }
uom = "0.37.0"
serde = { version = "1.0", features = ["derive"] }

[workspace.metadata.bevy_cli]
default_run = "buoy"
# Enable debug stepping for physics simulation debugging
debug_stepping = true
# Enable hot reloading for faster development
hot_reload = true
# Enable asset watching for configuration files
watch_assets = true

[workspace.metadata.bevy_cli.release]
# Disable dev features for release builds
default-features = false
# Enable optimizations for physics calculations
opt-level = 3

[workspace.metadata.bevy_cli.web]
# Disable native features for web builds
default-features = false
# Enable web-specific optimizations
opt-level = "s"

[workspace.metadata.bevy_cli.web.dev]
features = ["dev"]
# Enable web debugging tools
debug = true

# Configure Bevy lints for physics simulation
[workspace.metadata.bevy_lint]
# Deny panics in physics calculations
panicking_methods = "deny"
# Enable pedantic warnings for numerical accuracy
pedantic = "warn"
# Warn about potential floating point precision issues
float_cmp = "warn"
# Warn about potential performance issues in hot paths
performance = "warn"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile for our code.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = false

# The default profile is optimized for Wasm builds because that's what [Trunk
# reads](https://github.com/trunk-rs/trunk/issues/605). Optimize for size in the
# wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit. Slows compile times, marginal
# improvements.
# codegen-units = 1

# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime
# performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file
# size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
