[project]
name = "buopy"
version = "0.1.0"
description = "Buoy Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
    "numpy>=2.2.3",
    "rich>=13.9.4",
    "pydantic>=2.10.6",
    "forallpeople>=2.7.1",
    "scipy>=1.15.2",
    "matplotlib>=3.10.1",
]

[project.scripts]
buopy = "buopy.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
