[package]
name = "buoy-common"
version = "0.1.0"
description = "Common code for other buoy crates"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bevy = { workspace = true }
bevy_render = { workspace = true }
uom = { workspace = true }

[features]
default = [
    "dev",
]
dev = [
    "bevy/dynamic_linking",
]
window = [
    "bevy/bevy_window",
    "bevy/bevy_winit",
]
grid_space = []

# [package.metadata.mutually_exclusive_features]
