[package]
name = "buoy-physics"
version = "0.3.0"
description = "Physics for buoyancy simulation"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
uom = { workspace = true }
serde = { workspace = true }

[features]
default = [
    "dev",
]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
    "avian3d/bevy_diagnostic",
]


# [package.metadata.mutually_exclusive_features]
