[package]
name = "buoy-physics"
version = "0.4.0"
description = "Physics for buoyancy simulation (no bevy dependency)"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
uom = { workspace = true }
serde = { workspace = true }
glam = "0.30.5"
log = "0.4.27"

[features]
default = []
