[package]
name = "buoy-runtime"
version = "0.3.0"
description = "Runtime for the Buoy simulator"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
default-run = "buoy"

[[bin]]
name = "buoy"
path = "bin/main.rs"

[dependencies]
buoy-physics = { path = "../buoy-physics" }
buoy-ui = { path = "../buoy-ui", optional = true }
bevy = { workspace = true }
avian3d = { workspace = true }
uom = { workspace = true }
bevy-inspector-egui = { version = "0.32.0", optional = true, features = [
    "highlight_changes",
] }
bevy_egui = { workspace = true, optional = true }
bevy_common_assets = { workspace = true }
serde = { workspace = true }
bevy_ratatui = "0.9.2"
crossterm = "0.29.0"
ratatui = "0.29"

[features]
default = ["dev"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
    "avian3d/bevy_diagnostic",
]
render = [
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gizmos",
    "avian3d/bevy_scene",
]
gui = ["render", "buoy-ui", "bevy_egui"]
debug-ui = [
    "gui",
    "bevy/bevy_dev_tools",
    "buoy-ui/dev",
    "avian3d/debug-plugin",
    "bevy-inspector-egui",
]
