[package]
name = "buoy-runtime"
version = "0.3.0"
description = "Runtime for the Buoy simulator"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
default-run = "buoy"

[[bin]]
name = "buoy"
path = "bin/main.rs"

[dependencies]
buoy-physics = { path = "../buoy-physics" }
bevy = { workspace = true }
avian3d = { workspace = true }
uom = { workspace = true }
bevy_common_assets = { workspace = true }
serde = { workspace = true }
bevy_ratatui = "0.9.2"
crossterm = "0.29.0"
ratatui = "0.29"

[features]
default = ["dev"]
windowed = [
    "bevy/bevy_window",
    "bevy/bevy_winit",
]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
    "avian3d/bevy_diagnostic",
]
