[package]
name = "buoy-runtime"
version = "0.4.0"
description = "Runtime for the Buoy simulator"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
default-run = "buoy"

[[bin]]
name = "buoy"
path = "bin/main.rs"

[dependencies]
buoy-physics = { path = "../buoy-physics" }
bevy = { workspace = true }
avian3d = { workspace = true }
uom = { workspace = true }
serde = { workspace = true }
bevy_repl = { version = "0.3.0", features = ["derive"] }

[features]
default = ["dev"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
    "avian3d/bevy_diagnostic",
]
