[package]
name = "buoy-server"
version = "0.1.0"
description = "Server for buoyancy simulation"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "buoy-server"
path = "src/main.rs"

[dependencies]
buoy-core = { path = "../buoy-core" }
bevy = { workspace = true }
avian3d = { workspace = true }
uom = { workspace = true }
bevy_remote = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }

[features]
default = [
    "dev",
    "bevy/bevy_winit",
]
dev = [
    "bevy/bevy_debug_stepping",
    "avian3d/debug-plugin",
]
