[package]
name = "buoy-ui"
version = "0.1.0"
description = "UI for the Buoy simulator"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
buoy-common = { path = "../buoy-common", features = ["window"] }
buoy-physics = { path = "../buoy-physics" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_render",               # this includes bevy_mesh
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "default_font",
    "tonemapping_luts",
    "x11",
] }
avian3d = { workspace = true, optional = true, features = ["bevy_picking"] }
big_space = { workspace = true, optional = true, features = ["camera"] }
bevy_egui = { version = "0.34.1" }

[features]
default = ["dev"]
dev = [
    "buoy-common/dev",
    "buoy-physics/dev",
    "bevy/dynamic_linking",
    "avian3d/diagnostic_ui",
    "avian3d/debug-plugin",
    "bevy/bevy_dev_tools",
]
grid_space = [
    "buoy-common/grid_space",
    "buoy-physics/grid_space",
    "big_space",
    "big_space/debug",
]
