[package]
name = "buoy-ui"
version = "0.3.0"
description = "UI for the Buoy simulator"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "buoy-ui"
path = "bin/main.rs"

[dependencies]
buoy-physics = { path = "../buoy-physics" }
buoy-runtime = { path = "../buoy-runtime" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "default_font",
    "tonemapping_luts",
    "x11",
] }
avian3d = { workspace = true, optional = true, features = ["bevy_picking"] }
bevy_egui = { version = "0.35.0" }
bevy_common_assets = { workspace = true }
bevy-inspector-egui = { version = "0.32.0", optional = true, features = [
    "highlight_changes",
] }

[features]
default = ["dev"]
dev = [
    "buoy-physics/dev",
    "buoy-runtime/dev",
    "bevy/dynamic_linking",
    "avian3d/diagnostic_ui",
    "avian3d/debug-plugin",
    "bevy/bevy_dev_tools",
    "bevy-inspector-egui",
]
