[package]
name = "buoy_aero"
version = "0.1.0"
edition = "2024"
description = "Advanced aerodynamics modeling for buoyant bodies"

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
uom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
