[package]
name = "buoy_atmo"
version = "0.1.0"
description = "Atmosphere models"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
buoy_core = {path = "../buoy_core"}
bevy = { workspace = true }
uom = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
thiserror.workspace = true

[features]
default = [
    "us_std_1976",
]
us_std_1976 = []

[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
