[package]
name = "buoy_physics"
version = "0.1.0"
edition = "2024"
description = "Physics simulation components for the Buoy project"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
uom = { workspace = true }
avian3d = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = [
    "dev",
]
dev = [
    "bevy/bevy_debug_stepping",
]

[dev-dependencies]
proptest = { workspace = true }

[[example]]
name = "basic_physics"
path = "examples/basic_physics.rs"
