[package]
name = "buoy_sim"
version = "0.1.0"
edition = "2024"
description = "Main simulation application for the Buoy project"

[lib]
path = "src/lib.rs"

[[bin]]
name = "buoy"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
atty = "0.2"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
buoy_physics = { path = "../buoy_physics" }
buoy_aero = { path = "../buoy_aero" }
buoy_atmo = { path = "../buoy_atmo" }
buoy_common = { path = "../buoy_common" }

[features]
default = ["dev"]
dev = [
    "bevy/bevy_debug_stepping",
]
