[package]
name = "buoy_sim"
version = "0.1.0"
edition = "2024"
description = "Main simulation application for the Buoy project"

[lib]
path = "src/lib.rs"

[[bin]]
name = "buoy"
path = "src/main.rs"

[dependencies]
buoy_physics = { path = "../buoy_physics" }
buoy_aero = { path = "../buoy_aero" }
buoy_atmo = { path = "../buoy_atmo" }
buoy_common = { path = "../buoy_common" }
bevy = { workspace = true, features = [
    "bevy_core_pipeline",
    "bevy_color",
    "bevy_gizmos",
    "default_font",
    "bevy_text",
    "bevy_window",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "tonemapping_luts",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["dev"]
dev = ["bevy/bevy_debug_stepping"]
